clean filters button

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -22,6 +22,7 @@
 	},
 	"CLASSROOMS": "Klassen",
 	"CLASSROOM_DELETE": "Klassenzimmer löschen",
+	"CLEAN_ALL_FILTERS": "Alle Filter löschen",
 	"CLOSE_MENU": "Menü schließen",
 	"CONFIRM_PASSWORD": "Passwort bestätigen",
 	"CONTACT": {
