--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -22,6 +22,7 @@
 	},
 	"CLASSROOMS": "Classrooms",
 	"CLASSROOM_DELETE": "Delete classroom",
+	"CLEAN_ALL_FILTERS": "Clear all filters",
 	"CLOSE_MENU": "Close menu",
 	"CONFIRM_PASSWORD": "Confirm password",
 	"CONTACT": {
