--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -22,6 +22,7 @@
 	},
 	"CLASSROOMS": "Aulas",
 	"CLASSROOM_DELETE": "Borrar aula",
+	"CLEAN_ALL_FILTERS": "Borrar todos los filtros",
 	"CLOSE_MENU": "Cerrar menú",
 	"CONFIRM_PASSWORD": "Confirmar contraseña",
 	"CONTACT": {
