--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -22,6 +22,7 @@
 	},
 	"CLASSROOMS": "Classes",
 	"CLASSROOM_DELETE": "Supprimer la classe",
+	"CLEAN_ALL_FILTERS": "Effacer tous les filtres",
 	"CLOSE_MENU": "Fermer le menu",
 	"CONFIRM_PASSWORD": "Confirmer mot de passe",
 	"CONTACT": {
