--- a/src/assets/i18n/it.json
+++ b/src/assets/i18n/it.json
@@ -22,6 +22,7 @@
 	},
 	"CLASSROOMS": "Classi",
 	"CLASSROOM_DELETE": "Elimina classe",
+	"CLEAN_ALL_FILTERS": "Cancella tutti i filtri",
 	"CLOSE_MENU": "Chiudi menu",
 	"CONFIRM_PASSWORD": "Conferma password",
 	"CONTACT": {
