translate "No more days"

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -195,6 +195,7 @@
 		"NOTHING_HERE": "Upps! Hier nichts",
 		"NOTHING_MAN": "¯\\_(ツ)_/¯",
 		"NO_ACCOUNT": "Noch kein Benutzer?",
+		"NO_MORE_DAYS": "Keine weiteren Datensätze",
 		"RELOAD_PAGE_FOR_CHANGES": "Laden Sie die Seite neu, damit die Änderungen wirksam werden",
 		"SERVICE_NOT_AVAILABLE": "Dieser Service wird in Kürze verfügbar sein",
 		"STUDENT_ARCHIVE": "Möchten Sie diesen Studenten wirklich archivieren?",
