--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -195,6 +195,7 @@
 		"NOTHING_HERE": "Upps! There is nothing here",
 		"NOTHING_MAN": "¯\\_(ツ)_/¯",
 		"NO_ACCOUNT": "Not a user yet?",
+		"NO_MORE_DAYS": "No more records",
 		"RELOAD_PAGE_FOR_CHANGES": "Reload the page for changes to take effect",
 		"SERVICE_NOT_AVAILABLE": "This service will be available soon",
 		"STUDENT_ARCHIVE": "Are you sure you want to archive this student?",
