--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -195,6 +195,7 @@
 		"NOTHING_HERE": "Upps! Aquí no hay nada",
 		"NOTHING_MAN": "¯\\_(ツ)_/¯",
 		"NO_ACCOUNT": "¿Aún no eres usuario?",
+		"NO_MORE_DAYS": "No hay más registros",
 		"RELOAD_PAGE_FOR_CHANGES": "Recarga la página para que los cambios surtan efecto",
 		"SERVICE_NOT_AVAILABLE": "Pronto estará disponible este servicio",
 		"STUDENT_ARCHIVE": "¿Estás seguro que quieres archivar este alumno?",
