--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -195,6 +195,7 @@
 		"NOTHING_HERE": "Upps! Rien ici",
 		"NOTHING_MAN": "¯\\_(ツ)_/¯",
 		"NO_ACCOUNT": "Pas encore utilisateur?",
+		"NO_MORE_DAYS": "Plus d'enregistrements",
 		"RELOAD_PAGE_FOR_CHANGES": "Recharger la page pour que les modifications prennent effet",
 		"SERVICE_NOT_AVAILABLE": "Ce service sera bientôt disponible",
 		"STUDENT_ARCHIVE": "Voulez-vous vraiment archiver cet étudiant?",
