--- a/src/assets/i18n/it.json
+++ b/src/assets/i18n/it.json
@@ -195,6 +195,7 @@
 		"NOTHING_HERE": "Upps! Niente qui",
 		"NOTHING_MAN": "¯\\_(ツ)_/¯",
 		"NO_ACCOUNT": "Non sei ancora un utente?",
+		"NO_MORE_DAYS": "Niente più registrazioni",
 		"RELOAD_PAGE_FOR_CHANGES": "Ricarica la pagina per rendere effettive le modifiche",
 		"SERVICE_NOT_AVAILABLE": "Questo servizio sarà presto disponibile",
 		"STUDENT_ARCHIVE": "Sei sicuro di voler archiviare questo studente?",
