More quick dates

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -35,12 +35,16 @@
 	"DAILY": "Täglich",
 	"DATES": {
 		"ALL_TIME": "Die ganze Zeit",
+		"BEFORE_YESTERDAY": "Vorgestern",
 		"LAST_15DAYS": "Letzte 15 Tage",
 		"LAST_3MONTH": "Letzte 3 Monate",
 		"LAST_6MONTH": "letzte 6 Monate",
 		"LAST_MONTH": "Letzte 30 Tage",
-		"LAST_WEEK": "Letzte Woche",
-		"LAST_YEAR": "Vergangenes Jahr",
+		"LAST_WEEK": "Letzte 7 Tage",
+		"LAST_YEAR": "Letzte 365 Tage",
+		"PAST_MONTH": "Letzter Monat",
+		"PAST_WEEK": "Letzte Woche",
+		"PAST_YEAR": "Letztes Jahr",
 		"THIS_MONTH": "Diesen Monat",
 		"THIS_WEEK": "In dieser Woche",
 		"THIS_YEAR": "Dieses Jahr",
