--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -35,12 +35,16 @@
 	"DAILY": "Daily",
 	"DATES": {
 		"ALL_TIME": "All the time",
+		"BEFORE_YESTERDAY": "The day before yesterday",
 		"LAST_15DAYS": "Last 15 days",
 		"LAST_3MONTH": "Last 3 months",
 		"LAST_6MONTH": "Last 6 months",
 		"LAST_MONTH": "Last 30 days",
-		"LAST_WEEK": "Last Week",
-		"LAST_YEAR": "Last year",
+		"LAST_WEEK": "Last 7 days",
+		"LAST_YEAR": "Last 365 days",
+		"PAST_MONTH": "Last month",
+		"PAST_WEEK": "Last week",
+		"PAST_YEAR": "Last year",
 		"THIS_MONTH": "This month",
 		"THIS_WEEK": "This week",
 		"THIS_YEAR": "This year",
