--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -35,12 +35,16 @@
 	"DAILY": "Diario",
 	"DATES": {
 		"ALL_TIME": "Todo el tiempo",
+		"BEFORE_YESTERDAY": "Antes de ayer",
 		"LAST_15DAYS": "Últimos 15 días",
 		"LAST_3MONTH": "Últimos 3 meses",
 		"LAST_6MONTH": "Últimos 6 meses",
 		"LAST_MONTH": "Últimos 30 días",
-		"LAST_WEEK": "Última semana",
-		"LAST_YEAR": "Último año",
+		"LAST_WEEK": "Últimos 7 días",
+		"LAST_YEAR": "Últimos 365 días",
+		"PAST_MONTH": "Mes pasado",
+		"PAST_WEEK": "Semana pasada",
+		"PAST_YEAR": "Año pasado",
 		"THIS_MONTH": "Este mes",
 		"THIS_WEEK": "Esta semana",
 		"THIS_YEAR": "Este año",
