--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -35,12 +35,16 @@
 	"DAILY": "Tous les jours",
 	"DATES": {
 		"ALL_TIME": "Tout le temps",
+		"BEFORE_YESTERDAY": "Avant-hier",
 		"LAST_15DAYS": "15 derniers jours",
 		"LAST_3MONTH": "3 derniers mois",
 		"LAST_6MONTH": "6 derniers mois",
 		"LAST_MONTH": "30 derniers jours",
-		"LAST_WEEK": "Dernière semaine",
-		"LAST_YEAR": "Dernière année",
+		"LAST_WEEK": "7 derniers jours",
+		"LAST_YEAR": "Les 365 derniers jours",
+		"PAST_MONTH": "Le mois dernier",
+		"PAST_WEEK": "La semaine dernière",
+		"PAST_YEAR": "l'année dernière",
 		"THIS_MONTH": "Ce mois",
 		"THIS_WEEK": "Cette semaine",
 		"THIS_YEAR": "Cette année",
