--- a/src/assets/i18n/it.json
+++ b/src/assets/i18n/it.json
@@ -35,12 +35,16 @@
 	"DAILY": "Quotidiano",
 	"DATES": {
 		"ALL_TIME": "Tutto il tempo",
+		"BEFORE_YESTERDAY": "L'altro ieri",
 		"LAST_15DAYS": "Ultimi 15 giorni",
 		"LAST_3MONTH": "Ultimi 3 mesi",
 		"LAST_6MONTH": "ultimi 6 mesi",
 		"LAST_MONTH": "Ultimi 30 giorni",
-		"LAST_WEEK": "La settimana scorsa",
-		"LAST_YEAR": "L'anno scorso",
+		"LAST_WEEK": "Ultimi 7 giorni",
+		"LAST_YEAR": "Ultimi 365 giorni",
+		"PAST_MONTH": "Il mese scorso",
+		"PAST_WEEK": "La settimana scorsa",
+		"PAST_YEAR": "L'anno scorso",
 		"THIS_MONTH": "Questo mese",
 		"THIS_WEEK": "Questa settimana",
 		"THIS_YEAR": "Quest'anno",
