--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -261,6 +261,8 @@
 		"OUT": "Cerrar sesión",
 		"UP": "Crear cuenta"
 	},
+	"SORT_ALPHABETICALLY": "Ordenar alfabéticamente",
+	"SORT_BY_DATE": "Ordenar por fecha",
 	"SORT_COLUMN": "Ordenar columna",
 	"STUDENT": "Alumno",
 	"STUDENTS": "Alumnos",
