--- a/src/assets/i18n/it.json
+++ b/src/assets/i18n/it.json
@@ -261,6 +261,8 @@
 		"OUT": "Chiudi Sessione",
 		"UP": "Crea un account"
 	},
+	"SORT_ALPHABETICALLY": "Ordina in ordine alfabetico",
+	"SORT_BY_DATE": "Ordina per data",
 	"SORT_COLUMN": "Ordina colonna",
 	"STUDENT": "Studente",
 	"STUDENTS": "Scuola",
