Forgot password & refactor login

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -74,7 +74,7 @@
 		"CLASSROOM_EXISTS": "Es gibt bereits ein Klassenzimmer mit demselben Namen",
 		"CONFIRM_PASSWORD_NOT_MATCH": "Passwörter stimmen nicht überein",
 		"CONFIRM_PASSWORD_REQUIRED": "Sie müssen das Passwort bestätigen",
-		"EMAIL_ALREADY_IN_USE": "Diese E-Mail wird bereits verwendet",
+		"EMAIL_ALREADY_IN_USE": "Es gibt bereits ein Konto mit dieser E-Mail",
 		"EMAIL_INVALID": "Bitte geben Sie eine gültige E-Mail-Adresse ein",
 		"EMAIL_REQUIRED": "Email ist erforderlich",
 		"FIELD_REQUIRED": "Dieses Feld ist obligatorisch.",
@@ -194,6 +194,9 @@
 		"DAY_NOT_EXIST": "Dieser Datensatz existiert nicht",
 		"DAY_STUDENT_ARCHIVED": "Sie können keine Aufzeichnungen eines archivierten Schülers erstellen. Zuerst entladen",
 		"DAY_UPDATE_OK": "Geänderter Datensatz",
+		"FORGOT_PASSWORD": "Haben Sie Ihr Passwort vergessen?",
+		"FORGOT_PASSWORD_EMAIL": "Prüfen Sie Ihre E-Mail. Wir haben Ihnen eine E-Mail mit Anweisungen zum Zurücksetzen Ihres Passworts gesendet.",
+		"FORGOT_PASSWORD_TITLE": "Geben Sie Ihre E-Mail-Adresse ein, um Ihr Passwort zurückzusetzen. Wir werden Ihnen eine E-Mail mit Anweisungen senden.",
 		"LOGOUT": "Möchten Sie sich abmelden?",
 		"LOGOUT_CONFIRM": "Dann hoffen wir, dass Sie bald wiederkommen :)",
 		"NOTHING_HERE": "Upps! Hier nichts",
@@ -260,6 +263,7 @@
 	"SHOW_MORE": "Mehr anzeigen",
 	"SHOW_PASSWORD": "Passwort anzeigen",
 	"SIGN": {
+		"FORGOT": "Passwort zurücksetzen",
 		"IN": "Anmelden",
 		"IN_WITH_FACEBOOK": "Mit Facebook einloggen",
 		"IN_WITH_GOOGLE": "Mit Google anmelden",
