--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -74,7 +74,7 @@
 		"CLASSROOM_EXISTS": "There is already a classroom with the same name",
 		"CONFIRM_PASSWORD_NOT_MATCH": "Passwords do not match",
 		"CONFIRM_PASSWORD_REQUIRED": "You must confirm the password",
-		"EMAIL_ALREADY_IN_USE": "This email is already being used",
+		"EMAIL_ALREADY_IN_USE": "There is already an account with this email address",
 		"EMAIL_INVALID": "Please enter a valid email",
 		"EMAIL_REQUIRED": "Email is required",
 		"FIELD_REQUIRED": "This field is required",
@@ -194,6 +194,9 @@
 		"DAY_NOT_EXIST": "This record does not exist",
 		"DAY_STUDENT_ARCHIVED": "You cannot create records of an archived student. Unarchive it first",
 		"DAY_UPDATE_OK": "Modified Record",
+		"FORGOT_PASSWORD": "Forgot your password?",
+		"FORGOT_PASSWORD_EMAIL": "Check your email. We have sent you an email with instructions on how to reset your password.",
+		"FORGOT_PASSWORD_TITLE": "Enter your email to reset your password. We will send you an email with instructions.",
 		"LOGOUT": "Do you want to log out?",
 		"LOGOUT_CONFIRM": "If you do we hope you come back soon :)",
 		"NOTHING_HERE": "Upps! There is nothing here",
@@ -260,6 +263,7 @@
 	"SHOW_MORE": "Show more",
 	"SHOW_PASSWORD": "Show password",
 	"SIGN": {
+		"FORGOT": "Reset password",
 		"IN": "Log In",
 		"IN_WITH_FACEBOOK": "Login with Facebook",
 		"IN_WITH_GOOGLE": "Sign in with Google",
