--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -74,7 +74,7 @@
 		"CLASSROOM_EXISTS": "Ya existe un aula con el mismo nombre",
 		"CONFIRM_PASSWORD_NOT_MATCH": "Las contraseñas no coinciden",
 		"CONFIRM_PASSWORD_REQUIRED": "Debes confirmar la contraseña",
-		"EMAIL_ALREADY_IN_USE": "Este correo electrónico ya está siendo utilizado",
+		"EMAIL_ALREADY_IN_USE": "Ya existe una cuenta con este correo",
 		"EMAIL_INVALID": "Por favor, introduce un email válido",
 		"EMAIL_REQUIRED": "El email es obligatorio",
 		"FIELD_REQUIRED": "Este campo es obligatorio",
@@ -194,6 +194,9 @@
 		"DAY_NOT_EXIST": "Este registro no existe",
 		"DAY_STUDENT_ARCHIVED": "No puedes crear registros de un alumno archivado. Desarchívalo primero",
 		"DAY_UPDATE_OK": "Registro modificado",
+		"FORGOT_PASSWORD": "¿Olvidaste tu contraseña?",
+		"FORGOT_PASSWORD_EMAIL": "Revisa tu correo. Te hemos enviado un email con las instrucciones para restaurar la contraseña.",
+		"FORGOT_PASSWORD_TITLE": "Introduce tu email para restaurar la contraseña. Te enviaremos un correo con instrucciones.",
 		"LOGOUT": "¿Quieres cerrar la sesión?",
 		"LOGOUT_CONFIRM": "Si lo haces esperamos que vuelvas pronto :)",
 		"NOTHING_HERE": "Upps! Aquí no hay nada",
@@ -260,6 +263,7 @@
 	"SHOW_MORE": "Mostrar más",
 	"SHOW_PASSWORD": "Mostrar contraseña",
 	"SIGN": {
+		"FORGOT": "Restaurar contraseña",
 		"IN": "Iniciar sesión",
 		"IN_WITH_FACEBOOK": "Iniciar sesión con Facebook",
 		"IN_WITH_GOOGLE": "Iniciar sesión con Google",
