--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -74,7 +74,7 @@
 		"CLASSROOM_EXISTS": "Il y a déjà une salle de classe du même nom",
 		"CONFIRM_PASSWORD_NOT_MATCH": "Les mots de passe ne correspondent pas",
 		"CONFIRM_PASSWORD_REQUIRED": "Vous devez confirmer le mot de passe",
-		"EMAIL_ALREADY_IN_USE": "Cet e-mail est déjà utilisé",
+		"EMAIL_ALREADY_IN_USE": "Il existe déjà un compte avec cette adresse e-mail",
 		"EMAIL_INVALID": "Veuillez saisir un e-mail valide",
 		"EMAIL_REQUIRED": "L'email est requis",
 		"FIELD_REQUIRED": "Ce champ est obligatoire",
@@ -194,6 +194,9 @@
 		"DAY_NOT_EXIST": "Cet enregistrement n'existe pas",
 		"DAY_STUDENT_ARCHIVED": "Vous ne pouvez pas créer d'enregistrements d'un étudiant archivé. Déchargez-le d'abord",
 		"DAY_UPDATE_OK": "Enregistrement modifié",
+		"FORGOT_PASSWORD": "Vous avez oublié votre mot de passe ?",
+		"FORGOT_PASSWORD_EMAIL": "Vérifiez votre courrier électronique. Nous vous avons envoyé un courriel contenant les instructions pour réinitialiser votre mot de passe.",
+		"FORGOT_PASSWORD_TITLE": "Saisissez votre adresse électronique pour réinitialiser votre mot de passe. Nous vous enverrons un courriel avec des instructions.",
 		"LOGOUT": "Voulez-vous vous déconnecter?",
 		"LOGOUT_CONFIRM": "Si vous le faites, nous espérons que vous reviendrez bientôt :)",
 		"NOTHING_HERE": "Upps! Rien ici",
@@ -260,6 +263,7 @@
 	"SHOW_MORE": "Afficher plus",
 	"SHOW_PASSWORD": "Afficher le mot de passe",
 	"SIGN": {
+		"FORGOT": "Réinitialiser le mot de passe",
 		"IN": "Commencer la session",
 		"IN_WITH_FACEBOOK": "Connectez-vous avec Facebook",
 		"IN_WITH_GOOGLE": "Connectez-vous avec Google",
