--- a/src/assets/i18n/it.json
+++ b/src/assets/i18n/it.json
@@ -74,7 +74,7 @@
 		"CLASSROOM_EXISTS": "Esiste già un'aula con lo stesso nome",
 		"CONFIRM_PASSWORD_NOT_MATCH": "Le password non corrispondono",
 		"CONFIRM_PASSWORD_REQUIRED": "Devi confermare la password",
-		"EMAIL_ALREADY_IN_USE": "Questa email è già in uso",
+		"EMAIL_ALREADY_IN_USE": "C'è già un account con questa email",
 		"EMAIL_INVALID": "Inserisci un indirizzo email valido",
 		"EMAIL_REQUIRED": "Email obbligatoria",
 		"FIELD_REQUIRED": "Questo campo è obbligatorio",
@@ -194,6 +194,9 @@
 		"DAY_NOT_EXIST": "Questo record non esiste",
 		"DAY_STUDENT_ARCHIVED": "Non è possibile creare record di uno studente archiviato. Scaricalo prima",
 		"DAY_UPDATE_OK": "Record modificato",
+		"FORGOT_PASSWORD": "Hai dimenticato la tua password?",
+		"FORGOT_PASSWORD_EMAIL": "Controlla la tua e-mail. Ti abbiamo inviato un'e-mail con le istruzioni su come reimpostare la tua password.",
+		"FORGOT_PASSWORD_TITLE": "Inserisci il tuo indirizzo e-mail per reimpostare la tua password. Ti invieremo un'e-mail con le istruzioni.",
 		"LOGOUT": "Vuoi uscire?",
 		"LOGOUT_CONFIRM": "Se lo fai, speriamo che torni presto :)",
 		"NOTHING_HERE": "Upps! Niente qui",
@@ -260,6 +263,7 @@
 	"SHOW_MORE": "Mostra di più",
 	"SHOW_PASSWORD": "Mostra password",
 	"SIGN": {
+		"FORGOT": "Ripristina la password",
 		"IN": "Accedi",
 		"IN_WITH_FACEBOOK": "Accedi con Facebook",
 		"IN_WITH_GOOGLE": "Accedi con Google",
