floating button improved

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -192,6 +192,7 @@
 		"DAY_CREATION_DISABLED_NO_STUDENTS": "Um einen neuen Datensatz zu erstellen, muss mindestens ein Schüler in Ihrer Schule eingeschrieben sein.",
 		"DAY_DELETE": "Möchten Sie diesen Datensatz wirklich löschen?",
 		"DAY_DELETE_OK": "Die Registrierung wurde erfolgreich gelöscht",
+		"DAY_LIST_EMPTY": "Es wird kein Datensatz erstellt. Sie können eine neue erstellen, indem Sie auf die große Schaltfläche unten klicken.",
 		"DAY_NOT_EXIST": "Dieser Datensatz existiert nicht",
 		"DAY_STUDENT_ARCHIVED": "Sie können keine Aufzeichnungen eines archivierten Schülers erstellen. Zuerst entladen",
 		"DAY_UPDATE_OK": "Geänderter Datensatz",
@@ -213,6 +214,7 @@
 		"STUDENT_DELETE": "Möchten Sie diesen Schüler wirklich löschen?",
 		"STUDENT_DELETE_2": "Beachten Sie, dass die mit diesem Schüler verknüpften täglichen Aufzeichnungen ebenfalls gelöscht werden. Wenn Sie dies nicht möchten, denken Sie daran, dass Sie es jederzeit archivieren können",
 		"STUDENT_DELETE_OK": "Der Student wurde erfolgreich gelöscht",
+		"STUDENT_LIST_EMPTY": "Sie haben keine Schüler, die an Ihrer Schule eingeschrieben sind. Sie können es hinzufügen, indem Sie auf die große Schaltfläche unten klicken, die wie eine gebratene Kartoffel schlägt.",
 		"STUDENT_UNARCHIVE": "Möchten Sie diesen Studenten wirklich aus dem Archiv entfernen?",
 		"STUDENT_UNARCHIVED_OK": "Der Student wurde korrekt aus dem Archiv entfernt",
 		"STUDENT_UNARCHIVE_2": "Wenn Sie dies tun, werden die Schülerlisten erneut angezeigt und ihre Aufzeichnungen werden angezeigt. Sie können auch Datensätze neu erstellen, die diesem Schüler zugeordnet sind.",
