--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -192,6 +192,7 @@
 		"DAY_CREATION_DISABLED_NO_STUDENTS": "To create a new record you need to have at least one student enrolled in your school.",
 		"DAY_DELETE": "Are you sure you want to delete this record?",
 		"DAY_DELETE_OK": "Registry has been deleted successfully",
+		"DAY_LIST_EMPTY": "No record is created. You can create a new one by clicking on the large button below.",
 		"DAY_NOT_EXIST": "This record does not exist",
 		"DAY_STUDENT_ARCHIVED": "You cannot create records of an archived student. Unarchive it first",
 		"DAY_UPDATE_OK": "Modified Record",
@@ -213,6 +214,7 @@
 		"STUDENT_DELETE": "Are you sure you want to delete this student?",
 		"STUDENT_DELETE_2": "Note that the daily records associated with this student will also be deleted. If this is not what you want, remember that you can always archive it",
 		"STUDENT_DELETE_OK": "The student has been successfully deleted",
+		"STUDENT_LIST_EMPTY": "You don't have any students enrolled in your school. You can add it by clicking on the large button below that beats like a fried potato.",
 		"STUDENT_UNARCHIVE": "Are you sure you want to unarchive this student?",
 		"STUDENT_UNARCHIVED_OK": "Student unarchived correctly",
 		"STUDENT_UNARCHIVE_2": "Doing so will reappear in student listings and their records will be displayed. You can also re-create records associated with this student.",
