--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -192,6 +192,7 @@
 		"DAY_CREATION_DISABLED_NO_STUDENTS": "Para crear un nuevo registro necesitas tener al menos un alumno inscrito en tu escuela",
 		"DAY_DELETE": "¿Estás seguro que quieres borrar este registro?",
 		"DAY_DELETE_OK": "Se ha borrado correctamente el registro",
+		"DAY_LIST_EMPTY": "No hay ningún registro creado. Puedes crear uno nuevo pulsando en el botón grande de abajo.",
 		"DAY_NOT_EXIST": "Este registro no existe",
 		"DAY_STUDENT_ARCHIVED": "No puedes crear registros de un alumno archivado. Desarchívalo primero",
 		"DAY_UPDATE_OK": "Registro modificado",
@@ -213,6 +214,7 @@
 		"STUDENT_DELETE": "¿Estás seguro que quieres borrar este alumno?",
 		"STUDENT_DELETE_2": "Ten en cuenta que los registros diarios asociados a este alumno también se borrarán. Si esto no es lo que quieres, recuerda que siempre puedes archivarlo",
 		"STUDENT_DELETE_OK": "Se ha borrado correctamente el alumno",
+		"STUDENT_LIST_EMPTY": "No tienes ningún alumno inscrito en tu escuela. Puedes añadirlo pulsando en el botón grande de abajo que palpita como una patata frita.",
 		"STUDENT_UNARCHIVE": "¿Estás seguro que quieres desarchivar este alumno?",
 		"STUDENT_UNARCHIVED_OK": "Alumno desarchivado correctamente",
 		"STUDENT_UNARCHIVE_2": "Si lo hace volverá a aparecer en los listados de alumnos y se mostrarán sus registros. También podrá volver a crear registros asociados a este alumno.",
