--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -192,6 +192,7 @@
 		"DAY_CREATION_DISABLED_NO_STUDENTS": "Pour créer un nouvel enregistrement, vous devez avoir au moins un élève inscrit dans votre école.",
 		"DAY_DELETE": "Voulez-vous vraiment supprimer cet enregistrement?",
 		"DAY_DELETE_OK": "Le registre a été supprimé avec succès",
+		"DAY_LIST_EMPTY": "Aucun enregistrement n’est créé. Vous pouvez en créer un nouveau en cliquant sur le grand bouton ci-dessous.",
 		"DAY_NOT_EXIST": "Cet enregistrement n'existe pas",
 		"DAY_STUDENT_ARCHIVED": "Vous ne pouvez pas créer d'enregistrements d'un étudiant archivé. Déchargez-le d'abord",
 		"DAY_UPDATE_OK": "Enregistrement modifié",
@@ -213,6 +214,7 @@
 		"STUDENT_DELETE": "Voulez-vous vraiment supprimer cet étudiant?",
 		"STUDENT_DELETE_2": "Notez que les enregistrements quotidiens associés à cet élève seront également supprimés. Si ce n'est pas ce que vous voulez, n'oubliez pas que vous pouvez toujours l'archiver",
 		"STUDENT_DELETE_OK": "L'élève a été supprimé avec succès",
+		"STUDENT_LIST_EMPTY": "Vous n’avez pas d’élèves inscrits dans votre école. Vous pouvez l’ajouter en cliquant sur le grand bouton ci-dessous qui bat comme une pomme de terre frite.",
 		"STUDENT_UNARCHIVE": "Voulez-vous vraiment désarchiver cet élève?",
 		"STUDENT_UNARCHIVED_OK": "L'élève s'est désarchivé correctement",
 		"STUDENT_UNARCHIVE_2": "Cela réapparaîtra dans les listes des étudiants et leurs dossiers seront affichés. Vous pouvez également recréer des enregistrements associés à cet élève.",
