--- a/src/assets/i18n/it.json
+++ b/src/assets/i18n/it.json
@@ -192,6 +192,7 @@
 		"DAY_CREATION_DISABLED_NO_STUDENTS": "Per creare un nuovo record devi avere almeno uno studente iscritto alla tua scuola.",
 		"DAY_DELETE": "Sei sicuro di voler eliminare questo record?",
 		"DAY_DELETE_OK": "Il registro è stato cancellato con successo",
+		"DAY_LIST_EMPTY": "Non viene creato alcun record. Puoi crearne uno nuovo cliccando sul grande pulsante qui sotto.",
 		"DAY_NOT_EXIST": "Questo record non esiste",
 		"DAY_STUDENT_ARCHIVED": "Non è possibile creare record di uno studente archiviato. Scaricalo prima",
 		"DAY_UPDATE_OK": "Record modificato",
@@ -213,6 +214,7 @@
 		"STUDENT_DELETE": "Sei sicuro di voler eliminare questo studente?",
 		"STUDENT_DELETE_2": "Si noti che anche i record giornalieri associati a questo studente verranno eliminati. Se questo non è ciò che desideri, ricorda che puoi sempre archiviarlo",
 		"STUDENT_DELETE_OK": "Lo studente è stato cancellato con successo",
+		"STUDENT_LIST_EMPTY": "Non hai studenti iscritti alla tua scuola. Puoi aggiungerlo cliccando sul grande pulsante qui sotto che batte come una patata fritta.",
 		"STUDENT_UNARCHIVE": "Sei sicuro di voler annullare l'archiviazione di questo studente?",
 		"STUDENT_UNARCHIVED_OK": "Studente non archiviato correttamente",
 		"STUDENT_UNARCHIVE_2": "In questo modo riapparirà nelle liste degli studenti e verranno visualizzati i loro record. Puoi anche ricreare i record associati a questo studente.",
